--- a/main_ui.html
+++ b/main_ui.html
@@ -5,8 +5,15 @@
     <script src='/js/boobtree.js'></script>
   </head>
   <body>
-    <div id="previous">P</div>
-    <div id="next">N</div>
+    <div id="previous">
+      <span id="initial">Write a phrase here</span>
+      <span id="previous-text"></span>
+      <img id="previous-drawing" />
+    </div>
+    <div id="next">
+      <textarea id="next-phrase"></textarea>
+      <canvas id="next-drawing"></canvas>
+    </div>
     <button id="done">Done</button>
   </body>
 </html>
