Transfer phrases (but not drawings) from one player to the next

--- a/main_ui.html
+++ b/main_ui.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <div id="previous">
-      <span id="initial">Write a phrase here</span>
       <span id="previous-text"></span>
       <img id="previous-drawing" />
     </div>
+    <div id="instructions"></div>
     <div id="next">
       <textarea id="next-phrase"></textarea>
       <canvas id="next-drawing"></canvas>
