--- a/main_ui.html
+++ b/main_ui.html
@@ -12,7 +12,9 @@
     <div id="instructions"></div>
     <div id="next">
       <textarea id="next-phrase"></textarea>
-      <canvas id="next-drawing"></canvas>
+      <div id="next-drawing">
+        <canvas id="next-drawing-canvas"></canvas>
+      </div>
     </div>
     <button id="done">Done</button>
   </body>
