--- a/main_ui.html
+++ b/main_ui.html
@@ -5,6 +5,7 @@
     <script src='/js/boobtree.js'></script>
   </head>
   <body>
+    <div>Round <span id="k">k</span> of <span id="n">n</span></div>
     <div id="previous">
       <span id="previous-text"></span>
       <img id="previous-drawing" />
