Add short codes to the new game page and the homepage

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   <body>
     <img src="boobtrees.jpg" id="treeofboobs" alt="TREE OF BOOBS" />
     <a href="newgame" id="new">Start a game</a>
+    <form method="get" action="/joinwithcode">
+    <div>Or enter a code: <input id='code' name='code' /> and <button id='join'>Join</button></div>
+    </form>
   </body>
 </html>
